Done report file and no orm C#. Project done

--- a/report.html
+++ b/report.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-<i>Last benchmark date: <span id="lastBenchmarkDate">xxx</span></i>
+<i>Last benchmark date: <span id="lastBenchmarkDate"></span></i>
 
 <h1>Benchmark report</h1>
 
@@ -47,7 +47,6 @@
 </div>
 
 <!-- TODO: cleanup code -->
-<!-- TODO: make grid 2x2 for charts -->
 <!-- TODO: finish non-orm c# benchmarks -->
 
 <!-- TODO: fix absolute paths in c# (dbCredentials.json and users/courses.json) -->
