--- a/report.html
+++ b/report.html
@@ -8,6 +8,7 @@
     <title>ORM benchmarks</title>
 
     <script type="module" src="node_modules/chart.js/dist/chart.umd.js"></script>
+    <script type="module" src="node_modules/chartjs-plugin-datalabels/dist/chartjs-plugin-datalabels.min.js"></script>
     <script type="module" src="node_modules/json-formatter-js/dist/json-formatter.umd.js"></script>
 
     <link rel="stylesheet" href="assets/style.css">
